2008-02-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7697: Syntax error raised by Mozilla 1.7 when loading htmlArea RTE

2008-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix feature #6601: issues with rootline HMENUs on a translated page

2008-02-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7607: Add post processing hooks for Frontend Editing

2008-02-26  Michael Stucki  <michael@typo3.org>

	* Rename t3lib_install::getFieldDefinitions_sqlContent() to t3lib_install::getFieldDefinitions_fileContent() and provide a wrapper for backwards compatibility
	* Lots of white-space fixes (to comply with old patch)
	* Lots of non-functional changes (to comply with old patch)

2008-02-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7637: Page tree fails to reload properly if page was manipulated
	* Fixed bug #7523: Description of properties is missing in install tool (Thanks to Steffen Kamper)

2008-02-26  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #7667: htmlArea RTE: Usability improvements in table operations
	* Fixed bug #7671: htmlArea RTE configuration variable "Add default User TSonfig RTE configuration" not working. Thanks to Jan Persson.
	* Fixed bug #7687: htmlArea RTE context menu may produce js error

2008-02-25  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up on bug #1697 (bug #7626): Timezone handling in datetime/time fields was broken, causing time to jump +serverTZ on each record saving.
	* Fixed bug #7626: Corrected handling of so called "half-hour" timezones (e.g. +0430) which caused wrong data to be saved in time/datetime fields.

2008-02-25  Michael Stucki  <michael@typo3.org>

	* Follow-up on issue #7526: Add configuration option $TYPO3_CONF_VARS[BE][loginNewsTitle] to t3lib/config_default.php (Thanks to Steffen Kamper)